# baize

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
crates/baize-acp/: Cargo.toml
crates/baize-acp/src/: lib.rs
crates/baize-adapters/: Cargo.toml
crates/baize-adapters/src/: lib.rs
crates/baize-cli/: Cargo.toml
crates/baize-cli/src/: main.rs
crates/baize-config/: Cargo.toml
crates/baize-config/src/: lib.rs
crates/baize-core/: Cargo.toml
crates/baize-core/src/: lib.rs
crates/baize-daemon/: Cargo.toml
crates/baize-daemon/src/: helpers.rs  lib.rs  router.rs  state.rs  tests.rs
crates/baize-daemon/src/handlers/: events.rs  handoffs.rs  mod.rs  permissions.rs  projects.rs  providers.rs  runtime.rs  sessions.rs  workspaces.rs
crates/baize-storage/: Cargo.toml
crates/baize-storage/src/: lib.rs
crates/baize-tui/: Cargo.toml
crates/baize-tui/src/: lib.rs
crates/baize-workspace/: Cargo.toml
crates/baize-workspace/src/: lib.rs
doc/: mvp-implementation-plan.md  quickstart.md  research.md  spec.md  tech-selection.md  technical-spec.md  vision.md
