[workspace]
resolver = "2"
members = [
  "crates/baize-core",
  "crates/baize-config",
  "crates/baize-storage",
  "crates/baize-workspace",
  "crates/baize-acp",
  "crates/baize-adapters",
  "crates/baize-daemon",
  "crates/baize-tui",
  "crates/baize-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://example.invalid/baize"

[workspace.dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.26", features = ["derive"] }
crossterm = "0.28.1"
dirs = "5.0.1"
futures = "0.3.31"
ratatui = "0.29.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tempfile = "3.15.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
wait-timeout = "0.2.1"
