[package]
name = "baize-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
baize-acp = { path = "../baize-acp" }
baize-core = { path = "../baize-core" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
wait-timeout.workspace = true
