[package]
name = "baize-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "baize"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
baize-adapters = { path = "../baize-adapters" }
baize-config = { path = "../baize-config" }
baize-daemon = { path = "../baize-daemon" }
baize-tui = { path = "../baize-tui" }
baize-workspace = { path = "../baize-workspace" }
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
baize-core = { path = "../baize-core" }
chrono.workspace = true
tempfile.workspace = true
