[package]
name = "baize-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
baize-adapters = { path = "../baize-adapters" }
baize-config = { path = "../baize-config" }
baize-core = { path = "../baize-core" }
baize-storage = { path = "../baize-storage" }
baize-workspace = { path = "../baize-workspace" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
